--- a/AccessReel/AccessReel/MainPage.xaml
+++ b/AccessReel/AccessReel/MainPage.xaml
@@ -24,6 +24,10 @@
                 Style="{StaticResource SubHeadline}"
                 SemanticProperties.HeadingLevel="Level2"
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+            
+            <!-- Temp Buttons -->
+            <Button x:Name="BtnListPage" Text="ListPage" Clicked="BtnListPage_Clicked"/>
+            
         </VerticalStackLayout>
     </ScrollView>
 
