--- a/AccessReel/AccessReel/ListPage.xaml
+++ b/AccessReel/AccessReel/ListPage.xaml
@@ -7,6 +7,7 @@
     <ContentPage.Resources>
         <ResourceDictionary>
             <local:ReviewScoreToAbsLayoutConverter x:Key="ReviewScoreToAbsLayoutConverter"/>
+            <!-- Template for movies articles -->
             <DataTemplate x:Name="DTMovieArticle" x:Key="templateMA">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -25,8 +26,27 @@
                     </VerticalStackLayout>
                     <AbsoluteLayout Grid.Column="2" Margin="10" x:Name="AbsLayoutReviewScore">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="DarkRed" Stroke="MediumVioletRed" StrokeThickness="15" />
-                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium"/>
+                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
                     </AbsoluteLayout>
+                </Grid>
+            </DataTemplate>
+            <!-- Template for regular articles -->
+            <DataTemplate x:Name="DTArticle" x:Key="templateArticle">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="300"/>
+                        <ColumnDefinition Width="120"/>
+                    </Grid.ColumnDefinitions>
+                    <Image Grid.Column="0" Margin="5"/>
+                    <VerticalStackLayout Grid.Column="1" Margin="5">
+                        <Label Text="{Binding Title}" FontAttributes="Bold" FontSize="Medium" Margin="5"/>
+                        <Label Text="{Binding Description}" FontSize="Body" Margin="5"/>
+                        <HorizontalStackLayout>
+                            <Label Text="{Binding Author}" FontSize="Caption" TextColor="LightGray" Margin="5"/>
+                            <Label Text="{Binding Date}" FontSize="Caption" TextColor="LightGray" Margin="5"/>
+                        </HorizontalStackLayout>
+                    </VerticalStackLayout>
                 </Grid>
             </DataTemplate>
         </ResourceDictionary>
