--- a/AccessReel/AccessReel/ListPage.xaml
+++ b/AccessReel/AccessReel/ListPage.xaml
@@ -53,6 +53,7 @@
     </ContentPage.Resources>
     <ScrollView>
         <VerticalStackLayout>
+            <Button x:Name="BtnFlyoutMenu"  Text="Menu" Clicked="BtnFlyoutMenu_Clicked"/>
             <Label x:Name="LblListPageTitle" Text="News/Films/Interviews" FontSize="Header"/>
             <CollectionView x:Name="CVArticles" ItemTemplate="{StaticResource templateMA}">
 
