FilmPage Started + Fixes
Also removed some unnecessary stuff.

--- a/AccessReel/AccessReel/FlyoutMenu.xaml
+++ b/AccessReel/AccessReel/FlyoutMenu.xaml
@@ -11,19 +11,19 @@
         <ContentPage Title="Flyout Menu">            
             <StackLayout>
                 <Button x:Name="BtnCloseMenu" Text="Close Menu" Clicked="BtnCloseMenu_Clicked" HorizontalOptions="End" />
-                <Button x:Name="BtnHomePage" Text="Home" Clicked="BtnHomePage_Clicked" HorizontalOptions="Fill" CornerRadius="0" BackgroundColor="White" BorderColor="LightGray" BorderWidth="1"/>
-                <Button x:Name="BtnNewsPage" Text="News" Clicked="BtnNewsPage_Clicked" HorizontalOptions="Fill" CornerRadius="0" BackgroundColor="White" BorderColor="LightGray" BorderWidth="1"/>
-                <Button x:Name="BtnReviewPage" Text="Reviews" Clicked="BtnReviewPage_Clicked" CornerRadius="0" BackgroundColor="White" BorderColor="LightGray" BorderWidth="1"/>
-                <Button x:Name="BtnFilmsPage" Text="Films" Clicked="BtnFilmsPage_Clicked" CornerRadius="0" BackgroundColor="White" BorderColor="LightGray" BorderWidth="1"/>
-                <Button x:Name="BtnTrailers" Text="Trailers" Clicked="BtnTrailers_Clicked" CornerRadius="0" BackgroundColor="White" BorderColor="LightGray" BorderWidth="1"/>
-                <Button x:Name="BtnInterviews" Text="Interviews" Clicked="BtnInterviews_Clicked" CornerRadius="0" BackgroundColor="White" BorderColor="LightGray" BorderWidth="1"/>
+                <Button x:Name="BtnHomePage" Text="Home" Clicked="BtnHomePage_Clicked" HorizontalOptions="Fill" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
+                <Button x:Name="BtnNewsPage" Text="News" Clicked="BtnNewsPage_Clicked" HorizontalOptions="Fill" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
+                <Button x:Name="BtnReviewPage" Text="Reviews" Clicked="BtnReviewPage_Clicked" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
+                <Button x:Name="BtnFilmsPage" Text="Films" Clicked="BtnFilmsPage_Clicked" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
+                <Button x:Name="BtnTrailers" Text="Trailers" Clicked="BtnTrailers_Clicked" CornerRadius="0"  BorderColor="LightGray" BorderWidth="1"/>
+                <Button x:Name="BtnInterviews" Text="Interviews" Clicked="BtnInterviews_Clicked" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
             </StackLayout>
         </ContentPage>
-    </FlyoutPage.Flyout>
+    </FlyoutPage.Flyout>    
     <FlyoutPage.Detail>
         <NavigationPage>
             <x:Arguments>
-                <local:ListPage/>
+                <local:MainPage/>
             </x:Arguments>
         </NavigationPage>
     </FlyoutPage.Detail>
