FilmPage and MainPage UI Additions

--- a/AccessReel/AccessReel/FlyoutMenu.xaml
+++ b/AccessReel/AccessReel/FlyoutMenu.xaml
@@ -10,7 +10,10 @@
         
         <ContentPage Title="Flyout Menu">            
             <StackLayout>
-                <Button x:Name="BtnCloseMenu" Text="Close Menu" Clicked="BtnCloseMenu_Clicked" HorizontalOptions="End" />
+                <Button x:Name="BtnCloseMenu" Text="X" 
+                        Clicked="BtnCloseMenu_Clicked" HorizontalOptions="End"
+                        FontAttributes="Bold" FontSize="Medium"
+                        BackgroundColor="MediumVioletRed"/>
                 <Button x:Name="BtnHomePage" Text="Home" Clicked="BtnHomePage_Clicked" HorizontalOptions="Fill" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
                 <Button x:Name="BtnNewsPage" Text="News" Clicked="BtnNewsPage_Clicked" HorizontalOptions="Fill" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
                 <Button x:Name="BtnReviewPage" Text="Reviews" Clicked="BtnReviewPage_Clicked" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
