--- a/AccessReel/AccessReel/Resources/Styles/Styles.xaml
+++ b/AccessReel/AccessReel/Resources/Styles/Styles.xaml
@@ -197,6 +197,11 @@
         <Setter Property="HorizontalTextAlignment" Value="Center" />
     </Style>
 
+    <Style TargetType="Label" x:Key="HomePageHeaders">
+        <Setter Property="TextColor" Value="White"/>
+        <Setter Property="FontSize" Value="32"/>
+    </Style>
+           
     <Style TargetType="ListView">
         <Setter Property="SeparatorColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray500}}" />
         <Setter Property="RefreshControlColor" Value="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource Gray200}}" />
