--- a/AccessReel/AccessReel/FilmPage.xaml
+++ b/AccessReel/AccessReel/FilmPage.xaml
@@ -6,6 +6,7 @@
     <ScrollView>
         <VerticalStackLayout HorizontalOptions="Fill" >
             <!-- Media Player Goes Here -->
+            <!-- Title/Score -->
             <HorizontalStackLayout HorizontalOptions="Center">
                 <Label x:Name="LblTitle" Text="Film Title" HorizontalOptions="Start" FontSize="Title" VerticalOptions="Center" WidthRequest="400"/>
                 <AbsoluteLayout Grid.Column="2" Margin="10" x:Name="AbsLayoutReviewScore" HorizontalOptions="End">
@@ -13,11 +14,13 @@
                     <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
                 </AbsoluteLayout>
             </HorizontalStackLayout>
+            <!-- Buttons to switch views -->
             <HorizontalStackLayout HorizontalOptions="CenterAndExpand" >
                 <Button x:Name="BtnOverview" Text="Overview" Clicked="BtnOverview_Clicked" WidthRequest="300"/>
                 <Button x:Name="BtnReview" Text="Review" Clicked="BtnReview_Clicked" WidthRequest="300"/>
             </HorizontalStackLayout>
             
+            <!-- Film Overview -->
             <Grid x:Name="FilmOverview" IsVisible="True" Margin="30">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
@@ -49,6 +52,7 @@
                 
             </Grid>
             
+            <!-- Film Review -->
             <Grid x:Name="FilmReview" IsVisible="False">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
@@ -56,7 +60,10 @@
                 </Grid.RowDefinitions>
                 <Label Grid.Row="0" x:Name="LblReview" Text="ReviewPlaceholder" HorizontalOptions="Center"/>
                 <HorizontalStackLayout Grid.Row="1" HorizontalOptions="Center" >
-                    <Label  x:Name="LblAuthor" Text="ReviewAuthor" VerticalOptions="Center" WidthRequest="500"/>
+                    <HorizontalStackLayout>
+                        <Image Source="dotnet_bot.png" HeightRequest="60" WidthRequest="60" Margin="5"/>
+                        <Label  x:Name="LblAuthor" Text="ReviewAuthor" VerticalOptions="Center" WidthRequest="500"/>
+                    </HorizontalStackLayout>                    
                     <AbsoluteLayout Margin="10" x:Name="AbsLayoutReviewScore2" HorizontalOptions="EndAndExpand">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="DarkRed" Stroke="MediumVioletRed" StrokeThickness="15" />
                         <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
