--- a/AccessReel/AccessReel/MainPage.xaml
+++ b/AccessReel/AccessReel/MainPage.xaml
@@ -11,32 +11,67 @@
             <DataTemplate x:Name="DTHomePageArticle" x:Key="TemplateArticle">
                 <VerticalStackLayout>
                     <ImageButton />
-                    <Image Source="{Binding Image}" HeightRequest="250" Aspect="AspectFit"/>
-                    <Label Text="{Binding Title}" FontAttributes="Bold" FontSize="Medium" Margin="5"/>
+                    <Image Source="{Binding Image}" HeightRequest="250" Aspect="AspectFit">
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="ArticleTapped"/>
+                        </Image.GestureRecognizers>
+                    </Image>
+                    <Label Text="{Binding Title}" FontAttributes="Bold" FontSize="Medium" Margin="5">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="ArticleTapped"/>
+                        </Label.GestureRecognizers>
+                    </Label>
                     <Label Text="{Binding Description}" FontSize="Body" Margin="5" LineBreakMode="TailTruncation" MaxLines="4"/>
                     <HorizontalStackLayout>
                         <Label Text="{x:Static icons:Icon.User}"/>
-                        <Label Text="{Binding Author}" FontSize="Caption" TextColor="DimGray" Margin="5"/>
-                            <Label Text="{x:Static icons:Icon.Clock}"/>
-                            <Label Text="{Binding FormattedDate}" FontSize="Caption" TextColor="Gray" Margin="5"/>
+                        <Label Text="{Binding Author}" FontSize="Caption" TextColor="DimGray" Margin="5">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Tapped="AuthorTapped"/>
+                            </Label.GestureRecognizers>
+                        </Label>
+                        <Label Text="{x:Static icons:Icon.Clock}"/>
+                        <Label Text="{Binding FormattedDate}" FontSize="Caption" TextColor="Gray" Margin="5"/>
                     </HorizontalStackLayout>
                 </VerticalStackLayout>
             </DataTemplate>
-            <!-- Template for user reviews on the homepage -->
+            <!-- Template for user reviews on the homepage
             <DataTemplate x:Key="TemplateUserReviews">
                 <AbsoluteLayout>
                     <ImageButton />
-                    <Image Source="{Binding Image}" HeightRequest="250" Aspect="AspectFit"/>
-                    <Label Text="{Binding Title}" BackgroundColor="DimGray" Opacity="10" TextColor="White" AbsoluteLayout.LayoutBounds="0,180"/>
+                    <Image Source="{Binding Image}" WidthRequest="250" Aspect="AspectFit"/>
+                    <Label Text="{Binding Title}" BackgroundColor="DimGray" Opacity="10" TextColor="White" AbsoluteLayout.LayoutBounds="0,150"/>
                     <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="400,80, AutoSize,AutoSize">
                         <Label Text="Critic" AbsoluteLayout.LayoutBounds="30,20"/>
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="DarkRed" Stroke="MediumVioletRed" StrokeThickness="15" AbsoluteLayout.LayoutBounds="80,1"/>
-                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".85,0.55" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White"/>
+                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".92,0.55" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White"/>
                     </AbsoluteLayout>
                     <AbsoluteLayout Margin="10" x:Name="UserReviewScore" AbsoluteLayout.LayoutBounds="400,140, AutoSize,AutoSize">
                         <Label Text="Members" AbsoluteLayout.LayoutBounds="1,1"/>
                         <RoundRectangle WidthRequest="60" HeightRequest="20" Fill="SkyBlue" CornerRadius="5" AbsoluteLayout.LayoutBounds="80,5"/>
                         <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds=".82,1" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Micro" TextColor="White"/>
+                    </AbsoluteLayout>
+                </AbsoluteLayout>
+            </DataTemplate> -->
+            <DataTemplate x:Key="TemplateUserReviews">
+                <AbsoluteLayout>
+                    <!-- Picture on the left in a square format with margin -->
+                    <Image Source="{Binding Image}" WidthRequest="150" HeightRequest="150" Aspect="AspectFill" AbsoluteLayout.LayoutBounds="0,20,150,150" />
+
+                    <!-- Title in the centre, horizontally start, with increased opacity -->
+                    <Label Text="{Binding Title}" TextColor="Black" FontAttributes="Bold" AbsoluteLayout.LayoutBounds="180,14, AutoSize,AutoSize" FontSize="Medium" />
+
+                    <!-- Critic Review score on the right top, including ellipse -->
+                    <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="500,25, AutoSize,AutoSize">
+                        <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" AbsoluteLayout.LayoutBounds="0,0" />
+                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".5,0.25" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold" />
+                        <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="6,65" FontAttributes="Bold"/>
+                    </AbsoluteLayout>
+
+                    <!-- User review below the critic review score with increased spacing -->
+                    <AbsoluteLayout Margin="10" x:Name="UserReviewScore" AbsoluteLayout.LayoutBounds="470,95, AutoSize,AutoSize">
+                        <RoundRectangle WidthRequest="60" HeightRequest="23" Fill="#00d1e4" CornerRadius="5" AbsoluteLayout.LayoutBounds="70,25" />
+                        <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds="0.8,0.96" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Micro" TextColor="white" FontAttributes="Bold" />
+                        <Label Text="Members" AbsoluteLayout.LayoutBounds="0,25" />
                     </AbsoluteLayout>
                 </AbsoluteLayout>
             </DataTemplate>
@@ -53,12 +88,12 @@
                     <DataTemplate>
                         <Frame HorizontalOptions="Center" BackgroundColor="White">
                             <AbsoluteLayout HorizontalOptions="Center">
-                                <Image Source="{Binding Image}" HeightRequest="200" Aspect="AspectFit"/>
-                                <Label Text="{Binding Title}" TextColor="White" BackgroundColor="Gray" Opacity="50"  AbsoluteLayout.LayoutBounds="-100,170"/>
-                                <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="400,80, AutoSize,AutoSize">
+                                <Image Source="{Binding Image}" Aspect="AspectFill"/>
+                                <Label Text="{Binding Title}" TextColor="White" BackgroundColor="#301c10" Opacity="50"  AbsoluteLayout.LayoutBounds="0,170" FontSize="Large"/>
+                                <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="800,60, AutoSize,AutoSize">
                                     <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="90,60" FontAttributes="Bold" TextColor="White"/>
-                                    <Ellipse WidthRequest="60" HeightRequest="60" Fill="DarkRed" Stroke="MediumVioletRed" StrokeThickness="15" AbsoluteLayout.LayoutBounds="80,1"/>
-                                    <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="0.82,0.35" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White"/>
+                                    <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" AbsoluteLayout.LayoutBounds="80,1"/>
+                                    <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="0.82,0.35" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold"/>
                                 </AbsoluteLayout>
                             </AbsoluteLayout>
                         </Frame>
@@ -72,7 +107,7 @@
             <!-- Latest News-->
             <VerticalStackLayout>
                 <Label x:Name="LblLatestNews" Text="Latest News"
-                       BackgroundColor="SkyBlue" Style="{StaticResource HomePageHeaders}"/>
+                       BackgroundColor="#68ccde" Style="{StaticResource HomePageHeaders}"/>
                 <CollectionView x:Name="CVNews" ItemTemplate="{StaticResource TemplateArticle}" >
                     <CollectionView.ItemsLayout>
                         <GridItemsLayout Orientation="Vertical" Span="2"/>
@@ -81,7 +116,7 @@
             </VerticalStackLayout>
             <!-- Latest Interviews -->
             <VerticalStackLayout>
-                <Label x:Name="LblLatestInterviews" Text="Latest Interview"
+                <Label x:Name="LblLatestInterviews" Text="Latest Interviews"
                        BackgroundColor="Black" Style="{StaticResource HomePageHeaders}"/>
                 <CollectionView x:Name="CVInterviews" ItemTemplate="{StaticResource TemplateArticle}">
                     <CollectionView.ItemsLayout>
@@ -92,7 +127,7 @@
             <!-- Latest Reviews -->
             <VerticalStackLayout>
                 <Label x:Name="LblLatestReviews" Text="Latest Reviews" 
-                       BackgroundColor="SkyBlue" Style="{StaticResource HomePageHeaders}"/>
+                       BackgroundColor="#66ccdc" Style="{StaticResource HomePageHeaders}"/>
                 <CollectionView x:Name="CVReviews" ItemTemplate="{StaticResource TemplateArticle}">
                     <CollectionView.ItemsLayout>
                         <GridItemsLayout Orientation="Vertical" Span="2"/>
@@ -101,8 +136,9 @@
             </VerticalStackLayout>
             <!-- Top User Rated Reviews -->
             <VerticalStackLayout>
-                <Label x:Name="LblTopUserReviews" Text="Top User Rated Reviews" 
-                       BackgroundColor="DodgerBlue" Style="{StaticResource HomePageHeaders}"/>
+                <Label x:Name="LblTopUserReviews" Text="Top User Rated Reviews"
+                       Margin="0,0,0,50"
+                       BackgroundColor="#5192e3" Style="{StaticResource HomePageHeaders}"/>
                 <CollectionView x:Name="CVUserReviews" ItemTemplate="{StaticResource TemplateUserReviews}">
 
                 </CollectionView>
@@ -110,7 +146,7 @@
             <!-- New Trailers -->
             <VerticalStackLayout>
                 <Label x:Name="LblTrailers" Text="New Trailers" 
-                       BackgroundColor="OrangeRed" Style="{StaticResource HomePageHeaders}"/>
+                       BackgroundColor="#e17132" Style="{StaticResource HomePageHeaders}"/>
                 
                 <CarouselView x:Name="CVTrailers" IndicatorView="ITrailers" HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand">
                     <CarouselView.ItemTemplate>
@@ -118,7 +154,7 @@
                             <HorizontalStackLayout HorizontalOptions="Center">
                                 <VerticalStackLayout>
                                     <Image Source="{Binding Image}" HeightRequest="250" Aspect="AspectFit"/>
-                                    <Label Text="{Binding Title}" HorizontalOptions="Center"/>
+                                    <Label Text="{Binding Title}" HorizontalOptions="Center" FontAttributes="Bold"/>
                                 </VerticalStackLayout>
                             </HorizontalStackLayout>
                         </DataTemplate>
