--- a/AccessReel/AccessReel/MainPage.xaml
+++ b/AccessReel/AccessReel/MainPage.xaml
@@ -34,43 +34,30 @@
                     </HorizontalStackLayout>
                 </VerticalStackLayout>
             </DataTemplate>
-            <!-- Template for user reviews on the homepage
+
             <DataTemplate x:Key="TemplateUserReviews">
                 <AbsoluteLayout>
-                    <ImageButton />
-                    <Image Source="{Binding Image}" WidthRequest="250" Aspect="AspectFit"/>
-                    <Label Text="{Binding Title}" BackgroundColor="DimGray" Opacity="10" TextColor="White" AbsoluteLayout.LayoutBounds="0,150"/>
-                    <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="400,80, AutoSize,AutoSize">
-                        <Label Text="Critic" AbsoluteLayout.LayoutBounds="30,20"/>
-                        <Ellipse WidthRequest="60" HeightRequest="60" Fill="DarkRed" Stroke="MediumVioletRed" StrokeThickness="15" AbsoluteLayout.LayoutBounds="80,1"/>
-                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".92,0.55" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White"/>
-                    </AbsoluteLayout>
-                    <AbsoluteLayout Margin="10" x:Name="UserReviewScore" AbsoluteLayout.LayoutBounds="400,140, AutoSize,AutoSize">
-                        <Label Text="Members" AbsoluteLayout.LayoutBounds="1,1"/>
-                        <RoundRectangle WidthRequest="60" HeightRequest="20" Fill="SkyBlue" CornerRadius="5" AbsoluteLayout.LayoutBounds="80,5"/>
-                        <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds=".82,1" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Micro" TextColor="White"/>
-                    </AbsoluteLayout>
-                </AbsoluteLayout>
-            </DataTemplate> -->
-            <DataTemplate x:Key="TemplateUserReviews">
-                <AbsoluteLayout>
-                    <!-- Picture on the left in a square format with margin -->
-                    <Image Source="{Binding Image}" WidthRequest="150" HeightRequest="150" Aspect="AspectFill" AbsoluteLayout.LayoutBounds="0,20,150,150" />
+                    <Image Source="{Binding Image}" WidthRequest="150" HeightRequest="150" Aspect="AspectFill" AbsoluteLayout.LayoutBounds="0,20,150,150" >
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="ArticleTapped"/>
+                        </Image.GestureRecognizers>
+                    </Image>
 
-                    <!-- Title in the centre, horizontally start, with increased opacity -->
-                    <Label Text="{Binding Title}" TextColor="Black" FontAttributes="Bold" AbsoluteLayout.LayoutBounds="180,14, AutoSize,AutoSize" FontSize="Medium" />
+                    <Label Text="{Binding Title}" TextColor="Black" FontAttributes="Bold" AbsoluteLayout.LayoutBounds="180,14, AutoSize,AutoSize" FontSize="Medium">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="ArticleTapped"/>
+                        </Label.GestureRecognizers>
+                    </Label>
 
-                    <!-- Critic Review score on the right top, including ellipse -->
                     <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="500,25, AutoSize,AutoSize">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" AbsoluteLayout.LayoutBounds="0,0" />
                         <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".5,0.25" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold" />
                         <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="6,65" FontAttributes="Bold"/>
                     </AbsoluteLayout>
 
-                    <!-- User review below the critic review score with increased spacing -->
                     <AbsoluteLayout Margin="10" x:Name="UserReviewScore" AbsoluteLayout.LayoutBounds="470,95, AutoSize,AutoSize">
-                        <RoundRectangle WidthRequest="60" HeightRequest="23" Fill="#00d1e4" CornerRadius="5" AbsoluteLayout.LayoutBounds="70,25" />
-                        <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds="0.8,0.96" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Micro" TextColor="white" FontAttributes="Bold" />
+                        <RoundRectangle WidthRequest="40" HeightRequest="23" Fill="#00d1e4" CornerRadius="5" AbsoluteLayout.LayoutBounds="70,25" />
+                        <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds="0.9,0.96" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Micro" TextColor="white" FontAttributes="Bold" />
                         <Label Text="Members" AbsoluteLayout.LayoutBounds="0,25" />
                     </AbsoluteLayout>
                 </AbsoluteLayout>
@@ -105,7 +92,7 @@
             </CarouselView>
             <IndicatorView x:Name="IImageHeader" HorizontalOptions="Center"/>
             <!-- Latest News-->
-            <VerticalStackLayout>
+            <VerticalStackLayout BackgroundColor="#f8f8f8">
                 <Label x:Name="LblLatestNews" Text="Latest News"
                        BackgroundColor="#68ccde" Style="{StaticResource HomePageHeaders}"/>
                 <CollectionView x:Name="CVNews" ItemTemplate="{StaticResource TemplateArticle}" >
@@ -115,7 +102,7 @@
                 </CollectionView>
             </VerticalStackLayout>
             <!-- Latest Interviews -->
-            <VerticalStackLayout>
+            <VerticalStackLayout BackgroundColor="#f8f8f8">
                 <Label x:Name="LblLatestInterviews" Text="Latest Interviews"
                        BackgroundColor="Black" Style="{StaticResource HomePageHeaders}"/>
                 <CollectionView x:Name="CVInterviews" ItemTemplate="{StaticResource TemplateArticle}">
@@ -125,7 +112,7 @@
                 </CollectionView>
             </VerticalStackLayout>
             <!-- Latest Reviews -->
-            <VerticalStackLayout>
+            <VerticalStackLayout BackgroundColor="#f8f8f8">
                 <Label x:Name="LblLatestReviews" Text="Latest Reviews" 
                        BackgroundColor="#66ccdc" Style="{StaticResource HomePageHeaders}"/>
                 <CollectionView x:Name="CVReviews" ItemTemplate="{StaticResource TemplateArticle}">
@@ -135,7 +122,7 @@
                 </CollectionView>
             </VerticalStackLayout>
             <!-- Top User Rated Reviews -->
-            <VerticalStackLayout>
+            <VerticalStackLayout BackgroundColor="#f8f8f8">
                 <Label x:Name="LblTopUserReviews" Text="Top User Rated Reviews"
                        Margin="0,0,0,50"
                        BackgroundColor="#5192e3" Style="{StaticResource HomePageHeaders}"/>
@@ -144,7 +131,7 @@
                 </CollectionView>
             </VerticalStackLayout>
             <!-- New Trailers -->
-            <VerticalStackLayout>
+            <VerticalStackLayout BackgroundColor="#f8f8f8">
                 <Label x:Name="LblTrailers" Text="New Trailers" 
                        BackgroundColor="#e17132" Style="{StaticResource HomePageHeaders}"/>
                 
@@ -153,8 +140,16 @@
                         <DataTemplate>
                             <HorizontalStackLayout HorizontalOptions="Center">
                                 <VerticalStackLayout>
-                                    <Image Source="{Binding Image}" HeightRequest="250" Aspect="AspectFit"/>
-                                    <Label Text="{Binding Title}" HorizontalOptions="Center" FontAttributes="Bold"/>
+                                    <Image Source="{Binding Image}" HeightRequest="250" Aspect="AspectFit">
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="ArticleTapped"/>
+                                        </Image.GestureRecognizers>
+                                    </Image>
+                                    <Label Text="{Binding Title}" HorizontalOptions="Center" FontAttributes="Bold">
+                                        <Label.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="ArticleTapped"/>
+                                        </Label.GestureRecognizers>
+                                    </Label>
                                 </VerticalStackLayout>
                             </HorizontalStackLayout>
                         </DataTemplate>
