--- a/AccessReel/AccessReel/ArticlePage.xaml
+++ b/AccessReel/AccessReel/ArticlePage.xaml
@@ -8,7 +8,8 @@
         <VerticalStackLayout x:Name="ArticleLayout" HorizontalOptions="Center" WidthRequest="800">
             <Label x:Name="articleTitle" Text="Article Title" HorizontalOptions="Center" FontSize="Header" FontAttributes="Bold"/>
             <Image x:Name="banner" Margin="0,20,0,20"/>
-            <Label x:Name="paragraphsLbl" TextType="Html"/>
+            <StackLayout x:Name="contentStackLayout">
+            </StackLayout>
             <Button Text="AccessReel" 
                     BackgroundColor="Black" 
                     HorizontalOptions="Start"
